[package]
name = "reckle_trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.12.0", default-features = false, features = [
    "use_alloc",
] }
num-traits = "0.2"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
    "getrandom",
] }
log = "0.4.14"
anyhow = "1.0.40"
ark-bn254 = "0.4.0"
ark-std = "0.4.0"
num = { version = "0.4.0", default-features = false }

plonky2 = "0.1.4"
plonky2_crypto = { git = "https://github.com/Lagrange-Labs/plonky2-crypto", branch = "feat/serialization" }
plonky2-bn254 = { git = "https://github.com/sshravan/plonky2-bn254" }

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2" }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
    "getrandom",
] }
env_logger = { version = "0.11.3", default-features = false }
